[package]
name = "actix-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = "1.0.144"
dotenv = "0.15.0"
futures = "0.3.23"
env_logger = "0.7"
chrono = { version = "0.4.22", features = ["serde"] }
mongodb = "2"
jsonwebtoken = "=7.2"
rust-crypto = "0.2.36"



